[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/SpaceShip.gd" type="Script" id=1]
[ext_resource path="res://Scripts/StatsContainer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Weapon.gd" type="Script" id=3]
[ext_resource path="res://Resources/Fonts/PixelFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Img Resources/Frames Images/shipattack frames.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ShipWindow:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[node name="SpaceShip" type="Node2D"]
script = ExtResource( 1 )

[node name="ShipWindow" type="Sprite" parent="."]
position = Vector2( 90, 160 )
texture = ExtResource( 5 )
hframes = 5

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource( 3 )
type = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]

[node name="StatsContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 37.0
margin_right = 165.0
margin_bottom = 44.0
grow_horizontal = 2
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 93
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyLabel" type="Label" parent="StatsContainer"]
margin_right = 28.0
margin_bottom = 6.0
rect_min_size = Vector2( 28, 6 )
custom_fonts/font = ExtResource( 4 )
text = "5555Ep"
align = 1
valign = 1

[node name="ApLabel" type="Label" parent="StatsContainer"]
visible = false
margin_left = 60.0
margin_right = 89.0
margin_bottom = 6.0
rect_min_size = Vector2( 29, 6 )
custom_fonts/font = ExtResource( 4 )
custom_constants/line_spacing = 0
text = "2324ap"
align = 1
valign = 1

[node name="ShieldLabel" type="Label" parent="StatsContainer"]
margin_left = 121.0
margin_right = 149.0
margin_bottom = 6.0
rect_min_size = Vector2( 28, 6 )
custom_fonts/font = ExtResource( 4 )
text = "2000Sp"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/attack = SubResource( 1 )
[connection signal="Energy_Changed" from="." to="StatsContainer" method="_on_SpaceShip_Energy_Changed"]
[connection signal="Shield_Changed" from="." to="StatsContainer" method="_on_SpaceShip_Shield_Changed"]
